--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-streamlit==1.15.1
-plotly==5.10.0
-pandas==1.4.3
-numpy==1.23.1
-folium==0.13.0
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-haversine==2.7.0
-streamlit-folium==0.7.0
-Pillow==9.2.0
+folium==0.19.4
+haversine==2.9.0
+pandas==2.2.3
+Pillow==11.1.0
+plotly==5.24.1
+streamlit==1.41.1
+streamlit_folium==0.24.0
